[gd_scene load_steps=9 format=2]

[ext_resource path="res://Objects/Door2.gd" type="Script" id=1]
[ext_resource path="res://Imports/HorizontalDoor.png" type="Texture" id=2]

[sub_resource type="CanvasItemMaterial" id=5]
light_mode = 2

[sub_resource type="CanvasItemMaterial" id=6]
light_mode = 2

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.25, 25 )

[sub_resource type="Animation" id=2]
resource_name = "Open"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Door Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Door Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 11.5, 16 )

[node name="Door2" type="Area2D"]
material = SubResource( 5 )
script = ExtResource( 1 )

[node name="Door Sprite" type="Sprite" parent="."]
material = SubResource( 6 )
texture = ExtResource( 2 )
hframes = 8
vframes = 2

[node name="Door Collider2" type="CollisionShape2D" parent="."]
position = Vector2( -0.25, 9 )
shape = SubResource( 1 )

[node name="Door Animation2" type="AnimationPlayer" parent="."]
anims/Open = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Door Body2" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="Door Body Collider2" type="CollisionShape2D" parent="Door Body2"]
position = Vector2( -0.5, 0 )
shape = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Door2_body_entered"]
[connection signal="animation_finished" from="Door Animation2" to="." method="_on_Door_Animation2_animation_finished"]
